# Grandma-Mode-dnd

./: README.md  main_app.py  remote_device_app.py  requirements.txt
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/src/main/cpp/: dnd_manager.cpp  native_interface.cpp
android/src/main/cpp/include/: dnd_manager.h
android/src/main/java/com/example/grandmamodednd/: DNDNative.java  MainActivity.java
android/src/main/res/layout/: activity_main.xml
